<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Notification_Test" />
    <Button
        android:id="@+id/btn_nav_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NavigaitionBar_Hide" />
    <Button
        android:id="@+id/btn_nav_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NavigaitionBar_Show" />
    <Button
        android:id="@+id/btn_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Request_Root" />
    <Button
        android:id="@+id/btn_list_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/List_Group_Test" />
    <Button
        android:id="@+id/btn_opengl_es"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OpenGL_ES_Test" />

</LinearLayout>
